src/components/Footer/Footer.css
.footer {
  display: flex;
  background-color: #fbfbfb;
  border-top: 1px solid #e7e7e7;
  text-align: center;
  justify-content: center;
  align-items: center;
  position: fixed;
  left: 0;
  bottom: 0;
  height: 40px;
  width: 100%;
}

