fix: remove redundant text-align:center

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,6 @@
   display: flex;
   background-color: #fbfbfb;
   border-top: 1px solid #e7e7e7;
-  text-align: center;
   justify-content: center;
   align-items: center;
   position: fixed;
